Small spacing fixes.

--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ nav.site-navigation {
 }
 .navbar, .navbar-brand {
 	margin-bottom: 0;
-  font-size: 1.2em;
+  font-size: 18px;
 	font-weight: 400;
 }
 
@@ -290,7 +290,7 @@ nav.site-navigation .container {
 .navbar-default .navbar-nav > li > a {
   padding-right: 0;
   padding-left: 0;
-	padding-top: 10px;
+	padding-top: 11px;
   border-top: 4px solid transparent;
 }
 .navbar-default .navbar-nav > li > a:hover,
@@ -350,6 +350,7 @@ header a, header a:hover {
 
 section.main-content {
 	background-color: #fff;
+	padding-top: 1em;
 }
 
 .mask {
